--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -30,8 +30,8 @@ jobs:
           #build and run container remotely
           ssh -o StrictHostKeyChecking=no -i ssh_key.pem $DOCKER_HOST << 'EOF'
             cd ~/myapp
-            docker stop myapp || true
-            docker rm myapp || true
+            # docker stop myapp || true
+            # docker rm myapp || true
             docker buid -t myapp .
             docker run -d -p 8080:80 --name myapp myapp
           EOF
